--- a/src/Oro/Bundle/FrontendBundle/Resources/public/blank/scss/components/embedded-list/embedded-list.scss
+++ b/src/Oro/Bundle/FrontendBundle/Resources/public/blank/scss/components/embedded-list/embedded-list.scss
@@ -8,8 +8,6 @@
         // Hide content before slick slider is united
         overflow: hidden;
 
-        font-size: 0;
-
         white-space: nowrap;
 
         &.slick-initialized {
